--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -5,16 +5,16 @@
 
 		<div class="row">
 
-			<form class="col s6 offset-s3" id="createArticleForm">
+			<form class="col s6 offset-s3" id="createArticleForm" action="[[ url_for('add_entry') ]]" method="post">
 				<div class="row">
 					<div class="input-field">
-						<input placeholder="This is where your post's title goes..." id="title" type="text" class="validate">
+						<input placeholder="This is where your post's title goes..." id="title" type="text" class="validate" name="title">
 						<label for="title">Title</label>
 					</div>
 				</div>
 				<div class="row">
 					<div class="input-field">
-						<textarea placeholder="This is where your post's content goes..." id="content" class="materialize-textarea"></textarea>
+						<textarea placeholder="This is where your post's content goes..." id="content" class="materialize-textarea" name="content"></textarea>
 						<label for="content">Content</label>
 					</div>
 				</div>
