--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -5,32 +5,24 @@
 
 		<div class="row">
 
-			<form class="col s6 offset-s3" id="createArticleForm" action="[[ url_for('add_entry') ]]" method="post">
+			<form action="" method="post" name="CreateArticle" id="createArticleForm" class="col">
+
+				[[ form.hidden_tag() ]]
+
 				<div class="row">
-					<div class="input-field">
-						<input placeholder="This is where your post's title goes..." id="title" type="text" class="validate" name="title">
-						<label for="title">Title</label>
-					</div>
+					Please enter a title for your post: [[ form.title(size=50) ]]
 				</div>
+
 				<div class="row">
-					<div class="input-field">
-						<textarea placeholder="This is where your post's content goes..." id="content" class="materialize-textarea" name="content"></textarea>
-						<label for="content">Content</label>
-					</div>
+					Please enter content for your post: [[ form.content(size=500) ]]
 				</div>
+
 				<div class="row">
-					<div class="">
-						<input type="checkbox" class="filled-in" id="postAnonymously" v-model="anonymousPost"/>
-  						<label for="postAnonymously">Post anonymously</label>
-					</div>
+					<button class="btn waves-effect waves-light" type="submit">Submit
+						<i class="material-icons right">send</i>
+					</button>
 				</div>
-				<div class="row">
-					<div class="">
-						<button class="btn waves-effect waves-light" type="submit" name="action">Submit
-							<i class="material-icons right">send</i>
-						</button>
-					</div>
-				</div>	
+
 			</form>
 
 		</div>
